force-app/main/default/objects/Account_Payable__c/fields/Client_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Client_Invoice__c</fullName>
    <label>Client Invoice #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>