force-app/main/default/objects/Account_Payable__c/fields/Client_PO__c.field-meta.xml
<CustomField>
    <fullName>Client_PO__c</fullName>
    <label>Client PO #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>