force-app/main/default/objects/Account_Payable__c/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <inlineHelpText>The date the Contractor Invoice was posted for accounting purposes.  When the Contractor Invoice is Posted the system creates a Finance Transaction.</inlineHelpText>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>