force-app/main/default/objects/Account_Payable__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <description>Total - Discount</description>
    <formula>( Total_With_Tax__c  +  Tax_Amount__c ) - (Discount_Amount__c +  Processing_Discount_Received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SubTotal minus Discount plus Tax</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>