force-app/main/default/objects/Account_Payable__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Sum of all account payable items</description>
    <inlineHelpText>Sum of all account payable items</inlineHelpText>
    <label>Sub Total (Dep)</label>
    <summarizedField>Account_Payable_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Account_Payable_Item__c.Account_Payable__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>