force-app/main/default/objects/Account_Payable__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <formula>(Total__c + ( Total__c * Tax__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>