force-app/main/default/objects/Account_Payable__c/fields/Total_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Tax__c</fullName>
    <inlineHelpText>Rollup of the Total field on the invoice lines.</inlineHelpText>
    <label>SubTotal</label>
    <summarizedField>Account_Payable_Item__c.Total_Amount_With_Tax__c</summarizedField>
    <summaryForeignKey>Account_Payable_Item__c.Account_Payable__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>