force-app/main/default/objects/Account_Payable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Vendor__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Tax__c</columns>
    <columns>Payments__c</columns>
    <columns>Balance__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>